# rho_plus

./: .gitignore  .readthedocs.yaml  404.html  README.md  build.sh  heatmaps.ipynb  line-labels.ipynb  line-smoothing.ipynb  mkdocs.yml  pyproject.toml  seaborn-eval.ipynb  stats.ipynb
docs/: requirements.txt
docs/source/: conf.py  gallery.ipynb  index.rst  introduction.ipynb  quantitative_colormaps.ipynb  showcase.ipynb  user_guide.ipynb
rho_plus/: __init__.py  _scatter_label.py  bokeh.py  color_util.py  colors.py  fonts.py  matplotlib.py  matplotlib_tweaks.py  oklch_palettes.py  palettes.py  panel.py  plotly.py  sequential_palettes.py  smoothing.py  util.py  vega.py
rho_plus/data/: sequential_palettes.json  vega_rho_dark.json  vega_rho_light.json
scripts/: serialize_palettes.py  test_plots.py  write_plotly_jsons.py  write_vega_jsons.py
source/conf/: index.html
source/introduction/: index.html
source/quantitative_colormaps/: index.html
source/user_guide/: index.html
tests/: test_rho.py
